2018-06-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* When using two's complement representation on negative non-integers,
	  use the same number of decimals as without two's complement representation
	* Fix round() for negative rational numbers!

2018-06-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Interpret 5m 7cm (and similar, for m and L) as 5m+7cm, and 3h 5min (and similar) as 3h+5min
	* Interpret m2 and m3 as m^2 and m^3 (as before), but m4 as m*4

2018-05-31 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Treat definitions in non-standard user files as global (not directly editable), in order to avoid duplication
	* Add Calculator::calculateAndPrint() function

2018-05-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add "to base #" conversion
	* Lunar phase functions

2018-05-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Calendar conversion
	* Add "to" conversion for display of numbers in roman, sexagesimal, or time format

2018-05-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Search for matching functions, variables and units using 'list' (or 'find') command in qalc
	* Improved ln() simplifications

2018-05-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not automatically convert to broken down composite unit c for x*a+x*b (and similar),
	  if a and b are both aliases for c
	* Allow 1°2'3" format for degree, arminute and arcsecond
	* Add arcsec and armin reference name to Arcminute and Arcsecond
	* Use prime symbols for sexagesimal output format

2018-05-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix crash when expression contains '>', '<' or '=', and libqalculate is compiled with -D_GLIBCXX_ASSERTIONS
	* Allow 5'8" format for feet and inches

2018-05-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Treat rates.json with "Internal Server Error" message as failed exchange rates download

2018-05-14 Hanna Knutsson <hanna.knutsson@protonmail.com>
